compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__complex_division_by_non_zero_float.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "pub fn main() {\n  { 1.1 +. 2.0 } /. 2.3\n}"
---
----- SOURCE CODE
pub fn main() {
  { 1.1 +. 2.0 } /. 2.3
}

----- COMPILED JAVASCRIPT
export function main() {
  return (1.1 + 2.0) / 2.3;
}
