compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__division_by_zero_float.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "pub fn main() {\n  1.1 /. 0.0\n}"
---
----- SOURCE CODE
pub fn main() {
  1.1 /. 0.0
}

----- COMPILED JAVASCRIPT
import { divideFloat } from "../gleam.mjs";

export function main() {
  return divideFloat(1.1, 0.0);
}
