compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__division_by_zero_int.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "pub fn main() {\n  1 / 0\n}"
---
----- SOURCE CODE
pub fn main() {
  1 / 0
}

----- COMPILED JAVASCRIPT
import { divideInt } from "../gleam.mjs";

export function main() {
  return divideInt(1, 0);
}
