compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__float_divide_complex_expr.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\nfn go() {\n  case 1.0 >=. 0.0 {\n    True -> 2.0\n    False -> 4.0\n  } /. 2.0\n}\n"
---
import { divideFloat } from "../gleam.mjs";

function go() {
  return divideFloat(
    (() => {
      let $ = 1.0 >= 0.0;
      if ($) {
        return 2.0;
      } else {
        return 4.0;
      }
    })(),
    2.0
  );
}
