compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__float_equality-2.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 145
expression: "\nfn go(y) {\n  let x = 1.0\n  x == y\n}\n"
---
function go(y) {
  let x = 1.0;
  return x === y;
}

