compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__float_equality.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn go() {\n  1.0 != 2.0\n  1.0 == 2.0\n}\n"
---
----- SOURCE CODE

pub fn go() {
  1.0 != 2.0
  1.0 == 2.0
}


----- COMPILED JAVASCRIPT
export function go() {
  1.0 !== 2.0;
  return 1.0 === 2.0;
}
