compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__float_operator_complex_expr.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\nfn go() {\n  case 1.0 >=. 0.0 {\n    True -> 2.0\n    False -> 4.0\n  } /. 2.0 // => 1.0\n  case 1 >= 0 {\n    True -> 2\n    False -> 4\n  } / 2 // => 1\n  case 1 >= 0 {\n    True -> 2\n    False -> 4\n  } % 2 // => 0\n}\n"
---
import { remainderInt, divideFloat, divideInt } from "../gleam.mjs";

function go() {
  divideFloat(
    (() => {
      let $ = 1.0 >= 0.0;
      if ($) {
        return 2.0;
      } else {
        return 4.0;
      }
    })(),
    2.0
  );
  divideInt(
    (() => {
      let $ = 1 >= 0;
      if ($) {
        return 2;
      } else {
        return 4;
      }
    })(),
    2
  );
  return remainderInt(
    (() => {
      let $ = 1 >= 0;
      if ($) {
        return 2;
      } else {
        return 4;
      }
    })(),
    2
  );
}
